== 1.1

* Minor enhancement
  * We can omit 'return 0' when defining body with yaml.

== 1.0.0

* Major enhancement
  * Support for yaml definition of binding body.
  * Support for superclass (reuse of definitions from the super class)
  
== 0.7.1

The tests in this release do not pass, but the generator is really better and works. I just
don't have the time to fix the tests.

* Major enhancement
  * When the object inherits from a LuaObject class, it calls luaInit(L, obj, "foo.Bar")

== 0.7.0 2011-08-19

The tests in this release do not pass, but the generator is really better and works. I just
don't have the time to fix the tests.

* Major enhancements
  * Support for finding userdata from lua table ('super').

== 0.6.7

* Major enhancements
  * Added support for LuaStackSize pseudo return value (enables direct stack manipulation).
  * Added support for Qt 'public slot:' declarations.
  * Added support for 'ignore' @dub setting.
  * Added support for custom (or no) destructors.
  * Fixed bugs related to overloaded methods and constructors.
  * Added support for const char * return type.
  * Added support for delete in C++ and/or Lua (DeletableOutOfLua class).
  * Added 'deleted' method when the class can be destroyed out of Lua.
  * Added support for custom constructors.
  * Giving access to meta-table in libname.ClassName_.
  * Changed LuaL_check... for dubL_check... to work in try/catch scope (thanks to Ignacio Burgueño)
  * Fixed a bug in argument decision tree when there are default values.
  * Fixed error reporting in try/catch to avoid memory leaks (thanks to Ignacio Burgueño)

== 0.6.6 2010-12-16

* Major enhancements
  * Added support for @dub custom Doxygen tag to set class options.

== 0.6.5 2010-12-15

* Major enhancements
  * Added support for custom_types (defined with Dub::Lua.function_generator.custom_type).
  * Added support for lib_name and other customizations through klass.opts.

== 0.6.4 2010-07-14

* 1 enhancement